--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
+  <h1> Привет, друзья! </h1>
+  <p> Как ваши дела? </p>
 </html>
