--- a/index.html
+++ b/index.html
@@ -1,175 +1,149 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title> Туристический город Седона </title>
-</head>
+<HTML lang="ru">
+    <head>
+        <title>Туристический город Седона</title>
+        <meta charset="utf-8">
+    </head>
 
-<body>
-  <header class="page-header">
-  <nav class="navigation">
-  <a class="navigation-logo" href="index.html">
-  <img class="page-header-logo" src="" alt="Логотип города Седона"> </a>
+    <body>
+        <header class="page-header">
 
-<ul class="navigation-list">
-    <li class="navigation-item">
-    <a class="navigation-link navigation-link-current" href="main.html">Главная</a>
-    </li>
+            <section class="left-side">
+                <a class="navigation-logo" href="index.html"><img class="page-header-logo" src="" alt="Логотип города Седона"></a>
 
-    <li class="navigation-item">
-    <a class="navigation-link" href="about.html">О Седоне</a>
-    </li>
+                <nav class="navigation-menu">
+                    <a class="navigation-link navigation-link-current" href="main.html">Главная</a>
+                    <a class="navigation-link" href="about.html">О Седоне</a>
+                    <a class="navigation-link" href="hotels.html">Гостиницы</a>
+                </nav>
+            </section>
 
-    <li class="navigation-item">
-    <a class="navigation-link" href="hotels.html">Гостиницы</a>
-    </li>
-</ul>
+                <div class="navigation-actions">
+                    <button class="navigation-search" type="button"><img src="" alt="Поиск"></button>
+                    <button class="navigation-favourites" type="button"><img src="" alt="Нравится">
+                        <span class="navigation-favourites-number">99</span></button>
+                    <button class="navigation-btn" type="button">Хочу сюда!</button>
+                </div>
+        </header>
 
-<ul class="navigation-list navigation-user">
-    <li class="navigation-item">
-    <a class="navigation-link" href="#">
-    <span class="visually-hidden">Поиск</span>
-    </a>
-    </li>
+        <main>
+            <section class="main-banner">
+                <h1 class="page-title visually-hidden">SEDONA</h1>
+                <img class="main-banner-background" src="" alt="Вид на Седону">
+                <img class="main-banner-text" src="" alt="Welcome to the gorgeous SEDONA because the Grand Canyon sucks!">
+                <div class="triangle-block-divider"></div>
+            </section>
 
-    <li class="navigation-item">
-    <a class="navigation-link" href="#">
-    <span class="visually-hidden">Нравится</span>
-    </a>
-    </li>
+            <section class="main-description">
+                <h2>Седона — небольшой городок в Аризоне,
+                заслуживающий большего!</h2>
+                <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+            </section>
 
-    <li class="navigation-item">
-    <a class="navigation-link button-want-here" href="#">Хочу сюда</a>
-    </li>
-</ul>
-</nav>
+            <section class="advantages-true-city">
+                <div class="information-true-city">
+                    <h3>Настоящий городок</h3>
+                    <p>N1</p>
+                    <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                 </div>
+                <div class="image-true-city">
+                    <img class="advantages-true-city" src="" alt="Вид на улицу города Седона">
+                </div>
+            </section>
 
-<img class="page-image" src="" alt="Вид на Седону">
+            <section class="advantages-living-food-souvenirs">
+                <div class="advantages-living">
+                    <img class="advantages-living" src="" alt="Изображение домика">
+                    <h3>ЖИЛЬЕ</h3>
+                    <p>Рекомендуем пожить в настоящем мотеле,
+                    всё как в кино!</p>
+                </div>
 
- </header>
+                <div class="advantages-food">
+                    <img class="advantages-food" src="" alt="Изображение бургера">
+                    <h3>ЕДА</h3>
+                    <p>Всегда заказывайте
+                    топовый фирменный бургер, вы не разочаруетесь!</p>
+                </div>
 
-    <main class="main-index">
-        <p><b>WELCOME</b></p>
-        <p><i>-to the gorgeous-</i></p>
-        <h1 class="page-title">SEDONA</h1>
-        <cite> Because the Grand Canyon sucks!</cite>
-        <h2 class="section-title">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
-        <p><cite>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</cite></p>
+                <div class="advantages-souvenirs">
+                    <img class="advantages-souvenirs" src="" alt="Изображение подарка">
+                    <h3>СУВЕНИРЫ</h3>
+                    <p>Не только китайского,
+                    но и настоящего местного производства!</p>
+                </div>
+            </section>
 
-    <section class="advantages">
-    <h2 class="visually-hidden" class="advantages-title">ПРЕИМУЩЕСТВА</h2>
-    </section>
+            <section class="advantages-devils-bridge">
+                <div class="information-devils-bridge">
+                    <h3>Там есть
+                        мост дьявола</h3>
+                    <p>N2</p>
+                    <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                </div>
+                <div class="image-devils-bridge">
+                    <img class="advantages-devils-bridge" src="" alt="Вид каньон Седона">
+                </div>
+            </section>
 
-    <ol class="advantages-list">
-        <li class-"advantages-item">
-        <h3 class="advantages-title">НАСТОЯЩИЙ ГОРОДОК</h3>
-        <p>N1</p>
-        <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        </li>
-        <img class="slider-image" src="" alt="Улицы Седоны">
-    </ol>
+            <section class="square-road-tourists">
+                <div class="small-square">
+                    <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+                    <P>№3</P>
+                    <p>Все достопримечательности находятся очень близко</p>
+                </div>
 
-    <ul>
-        <li class-"advantages-item">
-        <img class="advantages-icon" src="" alt="иконка дома">
-        <h3 class="advantages-title">ЖИЛЬЕ</h3>
-        <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
+                <div class="beautiful-road">
+                    <h3>КРАСИВАЯ ДОРОГА</h3>
+                    <P>№4</P>
+                    <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
 
-        <li class-"advantages-item">
-        <img class="advantages-icon" src="" alt="иконка бургера">
-        <h3 class="advantages-title">ЕДА</h3>
-        <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-        </li>
+                <div class="few-tourists">
+                    <h3>МАЛО ТУРИСТОВ</h3>
+                    <P>№5</P>
+                    <p>Большинство едет в Гранд Каньон и толпится там</p>
+                </div>
+            </section>
 
-        <li class-"advantages-item">
-        <img class="advantages-icon" src="" alt="иконка подарка">
-        <h3 class="advantages-title">СУВЕНИРЫ</h3>
-        <p class="advantages-description">Не только китайского,но и настоящего местного производства!</p>
-        </li>
+            <section class="search">
+                <h2 class="search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+                <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <a class="button button-search" href="#">Поиск гостиницы в Седоне</a>
+            </section>
 
-        <img class="slider-image" src="" alt="Вид на каньон Седоны">
+            <section class="newsletter">
+                <img class="newsletter-background" src="" alt="Вид на Седону:блюр">
+                <h2 class="newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+                <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+                <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+                <label for="newsletter-email">Ваш e-mail</label>
+                <input class="field" type="email" placeholder="email@example.com" id="newsletter-email" name="Ваш e-mail">
+                <button class="button newsletter-button" type="submit">ПОДПИСАТЬСЯ</button>
+                </form>
+            </section>
+        </main>
 
-    <ol>
-        <li class-"advantages-item">
-        <h3 class="advantages-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-        <p>N2</p>
-        <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-        </li>
+        <footer>
+            <section class="footer-social">
+                <h3 class="page-footer-title" class="visually-hidden">Социальные сети</h3>
 
-        <li class-"advantages-item">
-        <h3 class="advantages-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-        <p>N3</p>
-        <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-        </li>
+                <div class="social">
+                <a class="button" href="https://vk.com/htmlacademy"><span class="visually-hidden">ВКонтакте</span></a>
+                <a class="button" href="https://t.me/htmlacademy"><span class="visually-hidden">Телеграм</span></a>
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Youtube</span></a>
+                </div>
+            </section>
 
-        <li class-"advantages-item">
-        <h3 class="advantages-title">КРАСИВАЯ ДОРОГА</h3>
-        <p>N4</p>
-        <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <section class="footer-contacts">
+                <h3 class="footer-contacts-title" class="visually-hidden">Контактный телефон</h3>
+                <address class="footer-contacts-address">
+                <a class="contact-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+                </address>
+             </section>
 
-        <li class-"advantages-item">
-        <h3 class="advantages-title">МАЛО ТУРИСТОВ</h3>
-        <p>N5</p>
-        <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-      </li>
-    </ol>
+            <p class="about-text">Сделано в <a class=" htmlacademy-link" href="https://htmlacademy.ru/>HTML Academy</a></p>
 
-    <section class="Search">
-    <h2 class="search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-    <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-    <a class="button button-search" href="#">Поиск гостиницы в Седоне</a>
-  </section>
-  </main>
-
-  <footer class="page-footer">
-
-  <section class="newsletter">
-    <h3 class="page-footer-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
-    <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-    <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-    <label for="newsletter-email">Ваш e-mail</label>
-    <input class="field" type="email" placeholder="email@example.com" id="newsletter-email" name="Ваш e-mail">
-    <button class="button newsletter-button" type="submit">ПОДПИСАТЬСЯ</button>
-    </form>
-  </section>
-
-    <img class="slider-image" src="" alt="Вид на Седону: блюр" >
-
-  <section class="footer-social">
-    <h3 class="page-footer-title" class="visually-hidden">Социальные сети</h3>
-    <ul class="footer-social-list">
-
-        <li class="footer-social-item">
-        <a class="button" href="https://vk.com/htmlacademy">
-        <span class="visually-hidden">ВКонтакте</span>
-        </a>
-        </li>
-
-        <li class="footer-social-item">
-        <a class="button" href="https://t.me/htmlacademy">
-        <span class="visually-hidden">Телеграм</span>
-        </a>
-        </li>
-
-        <li class="footer-social-item">
-        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-        <span class="visually-hidden">Youtube</span>
-        </a>
-        </li>
-    </ul>
-  </section>
-
-  <section class="footer-contacts">
-    <h3 class="footer-contacts-title" class="visually-hidden">Контактный телефон</h3>
-    <address class="footer-contacts-address">
-    <a class="contact-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-    </address>
-</section>
-
- <p class="about-text">Сделано в <a class=" htmlacademy-link" href="https://htmlacademy.ru/>HTML Academy</a></p>
-
-</footer>
-
-</body>
+        </footer>
+    </body>
 </html>
