--- a/catalogue.html
+++ b/catalogue.html
@@ -9,8 +9,7 @@
         <header class="page-header">
 
             <section class="left-side">
-                <a class="navigation-logo" href="index.html"><img class="page-header-logo" src="" alt="Логотип города Седона"></a>
-
+                <a class="navigation-logo" href="index.html"><img class="page-header-logo" src="images/logo-header.svg" width="139" height="70" alt="Логотип города Седона"></a>
                 <nav class="navigation-menu">
                     <a class="navigation-link" href="main.html">Главная</a>
                     <a class="navigation-link" href="about.html">О Седоне</a>
@@ -19,8 +18,8 @@
             </section>
 
                 <div class="navigation-actions">
-                    <button class="navigation-search" type="button"><img src="" alt="Поиск"></button>
-                    <button class="navigation-favourites" type="button"><img src="" alt="Нравится">
+                    <button class="navigation-search" type="button"><img src="images/search-header.svg" width="18" height="18" alt="Поиск"></button>
+                    <button class="navigation-favourites" type="button"><img src="images/favourites-header.svg" width="18" height="17" alt="Нравится">
                         <span class="navigation-favourites-number">99</span></button>
                     <button class="navigation-btn" type="button">Хочу сюда!</button>
                 </div>
@@ -33,7 +32,7 @@
                 <div class="breadcrumbs">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs-item"><span class="visually-hidden"><a class="breadcrumbs-Item-link button" href="index.html">Главная
-                            <img class="breadcrumbs-house" src="" alt="Изображение домика"></a></span></li>
+                            <img class="breadcrumbs-house" src="images/breadcrumbs-house.svg" width="=12" height="11" alt="Изображение домика"></a></span></li>
                         <li class="breadcrumbs-item"><a class="breadcrumbs-link">Гостиницы</a></li>
                     </ul>
                 </div>
@@ -109,51 +108,55 @@
                         <option value="expensive">Сначала дорогие</option>
                     </select>
 
-                        <a href="#" class="button button-light-current"><span class="visually-hidden">Показать карточки</span></a>
-                        <a href="#" class="button button-light"><span class="visually-hidden">Показать элемент</span></a>
-                        <a href="#" class="button button-light"><span class="visually-hidden">Показать список</span></a>
+                        <a href="#" class="button button-light-current"><img class="view-icon" src="images/view_cards_1.svg" width="48" height="48" alt="Показать карточки"></a>
+                        <a href="#" class="button button-light"><img class="view-icon" src="images/view-element_2.svg" width="48" height="48" alt="Показать элемент"></a>
+                        <a href="#" class="button button-light"><img class="view-icon" src="images/view-list_3.svg" width="48" height="48" alt="Показать список"></a>
                 </div>
 
             </section>
 
             <section class="hotel-cards">
                 <div class="Amara-Resort-and-SPA">
-                    <img class="hotel-card" scr="" alt="Изображение Amara Resort and SPA">
+                    <img class="hotel-card" src="images/hotel-1.png" width="300" height="211" alt="Изображение Amara Resort and SPA">
                     <h3><b>Amara Resort & SPA</b></h3>
                     <p>Гостиница</p>
                     <p>От 4000 р</p>
                     <button class="hotel-cards-details" type="button">Подробнее</button>
                     <button class="hotel-cards-favourites" type="button">В избранное</button>
+                    <button class="hotel-cards-ranking" type="button"><img src="images/hotel-ranking-4stars.svg" width="140" height="37" alt="Рейтинг 4 звезды"></button>
                     <button class="hotel-cards-ranking" type="button">Рейтинг: 8,5</button>
                 </div>
 
                 <div class="Villas-at-Poco-Diablo">
-                    <img class="hotel-card" scr="" alt="Изображение Villas at Poco Diablo">
+                    <img class="hotel-card" src="images/hotel-2.png" width="300" height="211" alt="Изображение Villas at Poco Diablo">
                     <h3><b>Villas at Poco Diablo</b></h3>
                     <p>Гостиница</p>
                     <p>От 5000 р</p>
                     <button class="hotel-cards-details" type="button">Подробнее</button>
                     <button class="hotel-cards-favourites-checked" type="button">В избранном</button>
+                    <button class="hotel-cards-ranking" type="button"><img src="images/hotel-ranking-4stars.svg" width="140" height="37" alt="Рейтинг 4 звезды"></button>
                     <button class="hotel-cards-ranking" type="button">Рейтинг: 9,2</button>
                 </div>
 
                 <div class="Desert-Quail-Inn">
-                    <img class="hotel-card" scr="" alt="Изображение Desert Quail Inn">
+                    <img class="hotel-card" src="images/hotel-3.png" width="300" height="211" alt="Изображение Desert Quail Inn">
                     <h3><b>Desert Quail Inn</b></h3>
                     <p>Гостиница</p>
                     <p>От 2500 р</p>
                     <button class="hotel-cards-details" type="button">Подробнее</button>
                     <button class="hotel-cards-favourites" type="button">В избранное</button>
+                    <button class="hotel-cards-ranking" type="button"><img src="images/hotel-ranking-3stars.svg" width="140" height="37" alt="Рейтинг 3 звезды"></button>
                     <button class="hotel-cards-ranking" type="button">Рейтинг: 6,9</button>
                 </div>
 
                 <div class="GreenTree-Inn">
-                    <img class="hotel-card" scr="" alt="Изображение GreenTree Inn">
+                    <img class="hotel-card" src="images/hotel-4.png" width="300" height="211" alt="Изображение GreenTree Inn">
                     <h3><b>GreenTree Inn</b></h3>
                     <p>Гостиница</p>
                     <p>От 1500 р</p>
                     <button class="hotel-cards-details" type="button">Подробнее</button>
                     <button class="hotel-cards-favourites" type="button">В избранное</button>
+                    <button class="hotel-cards-ranking" type="button"><img src="images/hotel-ranking-2stars.svg" width="140" height="37" alt="Рейтинг 2 звезды"></button>
                     <button class="hotel-cards-ranking" type="button">Рейтинг: 5,0</button>
                 </div>
             </section>
@@ -186,9 +189,9 @@
                 <h3 class="page-footer-title" class="visually-hidden">Социальные сети</h3>
 
                 <div class="social">
-                <a class="button" href="https://vk.com/htmlacademy"><span class="visually-hidden">ВКонтакте</span></a>
-                <a class="button" href="https://t.me/htmlacademy"><span class="visually-hidden">Телеграм</span></a>
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Youtube</span></a>
+                <a class="button" href="https://vk.com/htmlacademy"><img src="images/footer-social-vk.svg" width="47" height="40" alt="Вконтакте"></a>
+                <a class="button" href="https://t.me/htmlacademy"><img src="images/footer-social-telegram.svg" width="47" height="40" alt="Телеграм"></a>
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru"><img src="images/footer-social-youtube.svg" width="47" height="40" alt="Youtube"></a>
                 </div>
             </section>
 
@@ -199,7 +202,7 @@
                 </address>
              </section>
 
-            <p class="about-text">Сделано в <a class=" htmlacademy-link" href="https://htmlacademy.ru/>HTML Academy</a></p>
+             <a class="about-logo" href="https://htmlacademy.ru/"><img class="htmlacademy-link" src="images/footer-html-academy-logo.svg" width="115" height="34" alt="Логотип HTML Academy"></a>
 
         </footer>
     </body>
