--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header class="page-header">
 
             <section class="left-side">
-                <a class="navigation-logo" href="index.html"><img class="page-header-logo" src="" alt="Логотип города Седона"></a>
+                <a class="navigation-logo" href="index.html"><img class="page-header-logo" src="images/logo-header.svg" width="139" height="70" alt="Логотип города Седона"></a>
 
                 <nav class="navigation-menu">
                     <a class="navigation-link navigation-link-current" href="main.html">Главная</a>
@@ -19,8 +19,8 @@
             </section>
 
                 <div class="navigation-actions">
-                    <button class="navigation-search" type="button"><img src="" alt="Поиск"></button>
-                    <button class="navigation-favourites" type="button"><img src="" alt="Нравится">
+                    <button class="navigation-search" type="button"><img src="images/search-header.svg" width="18" height="18" alt="Поиск"></button>
+                    <button class="navigation-favourites" type="button"><img src="images/favourites-header.svg" width="18" height="17" alt="Нравится">
                         <span class="navigation-favourites-number">99</span></button>
                     <button class="navigation-btn" type="button">Хочу сюда!</button>
                 </div>
@@ -29,9 +29,9 @@
         <main>
             <section class="main-banner">
                 <h1 class="page-title visually-hidden">SEDONA</h1>
-                <img class="main-banner-background" src="" alt="Вид на Седону">
-                <img class="main-banner-text" src="" alt="Welcome to the gorgeous SEDONA because the Grand Canyon sucks!">
-                <div class="triangle-block-divider"></div>
+                <img class="main-banner-background" src="images/main-banner.jpg" width="1200" height="475" alt="Вид на Седону">
+                <img class="main-banner-text" src="images/welcome-main-banner.svg" width="458" height="352" alt="Welcome to the gorgeous SEDONA because the Grand Canyon sucks!">
+                <img class="triangle-block-divider" src="images/divider-after-main-banner.svg" width="1200" height="57" alt=""></div>
             </section>
 
             <section class="main-description">
@@ -47,27 +47,27 @@
                     <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                  </div>
                 <div class="image-true-city">
-                    <img class="advantages-true-city" src="" alt="Вид на улицу города Седона">
+                    <img class="advantages-true-city" src="images/true-city.jpg" width="800" height="384" alt="Вид на улицу города Седона">
                 </div>
             </section>
 
             <section class="advantages-living-food-souvenirs">
                 <div class="advantages-living">
-                    <img class="advantages-living" src="" alt="Изображение домика">
+                    <img class="advantages-living" src="images/Advantage-living-icon.svg" width="75" height="72" alt="Изображение домика">
                     <h3>ЖИЛЬЕ</h3>
                     <p>Рекомендуем пожить в настоящем мотеле,
                     всё как в кино!</p>
                 </div>
 
                 <div class="advantages-food">
-                    <img class="advantages-food" src="" alt="Изображение бургера">
+                    <img class="advantages-food" src="images/Advantage-food-icon.svg" width="74" height="70" alt="Изображение бургера">
                     <h3>ЕДА</h3>
                     <p>Всегда заказывайте
                     топовый фирменный бургер, вы не разочаруетесь!</p>
                 </div>
 
                 <div class="advantages-souvenirs">
-                    <img class="advantages-souvenirs" src="" alt="Изображение подарка">
+                    <img class="advantages-souvenirs" src="images/Advantage-souvenirs-icon.svg" width="64" height="76" alt="Изображение подарка">
                     <h3>СУВЕНИРЫ</h3>
                     <p>Не только китайского,
                     но и настоящего местного производства!</p>
@@ -82,7 +82,7 @@
                     <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                 </div>
                 <div class="image-devils-bridge">
-                    <img class="advantages-devils-bridge" src="" alt="Вид каньон Седона">
+                    <img class="advantages-devils-bridge" src="images/devils-bridge.jpg" width="800" height="384" alt="Вид каньон Седона">
                 </div>
             </section>
 
@@ -113,7 +113,7 @@
             </section>
 
             <section class="newsletter">
-                <img class="newsletter-background" src="" alt="Вид на Седону:блюр">
+                <img class="newsletter-background" src="images/newsletter-background.jpg" width="1200" height="411" alt="Вид на Седону:блюр">
                 <h2 class="newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
                 <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
                 <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -129,9 +129,9 @@
                 <h3 class="page-footer-title" class="visually-hidden">Социальные сети</h3>
 
                 <div class="social">
-                <a class="button" href="https://vk.com/htmlacademy"><span class="visually-hidden">ВКонтакте</span></a>
-                <a class="button" href="https://t.me/htmlacademy"><span class="visually-hidden">Телеграм</span></a>
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Youtube</span></a>
+                    <a class="button" href="https://vk.com/htmlacademy"><img src="images/footer-social-vk.svg" width="47" height="40" alt="Вконтакте"></a>
+                    <a class="button" href="https://t.me/htmlacademy"><img src="images/footer-social-telegram.svg" width="47" height="40" alt="Телеграм"></a>
+                    <a class="button" href="https://www.youtube.com/user/htmlacademyru"><img src="images/footer-social-youtube.svg" width="47" height="40" alt="Youtube"></a>
                 </div>
             </section>
 
@@ -142,7 +142,7 @@
                 </address>
              </section>
 
-            <p class="about-text">Сделано в <a class=" htmlacademy-link" href="https://htmlacademy.ru/>HTML Academy</a></p>
+            <a class="about-logo" href="https://htmlacademy.ru/"><img class="htmlacademy-link" src="images/footer-html-academy-logo.svg" width="115" height="34" alt="Логотип HTML Academy"></a>
 
         </footer>
     </body>
